fix: more misaligned styles

--- a/packages/data-bite/src/scss/bite.scss
+++ b/packages/data-bite/src/scss/bite.scss
@@ -123,7 +123,7 @@
     background: none !important;
 
     .cdc-callout {
-      gap: 0.5rem;
+      gap: 0.7rem;
       box-shadow: 0 2px 4px rgb(159 159 159 / 10%);
       border: 1px solid #dff2f6 !important;
       margin: 0 !important;
@@ -161,7 +161,7 @@
     }
 
     .cdc-callout__content {
-      font-size: 1.1rem;
+      font-size: 1rem;
     }
 
     .bite-subtext {
